# now-cli

./: .travis.yml  Cargo.toml  README.md  TODO.md
scripts/: before_deploy.ps1  before_deploy.sh  script.sh
src/: api.rs  cli.rs  handlers.rs  lib.rs  main.rs
