[package]
name = "now-cli"
description = "An unofficial Now client written in Rust"
version = "0.2.1"
authors = ["Dan Reeves <hey@danreev.es>"]
repository = "https://github.com/danreeves/now-cli"
license = "MIT"
readme = "README.md"

[dependencies]
serde_json = "1.0.28"
reqwest = "0.9.1"
structopt = "0.2.10"
rprompt = "1.0.3"
dialoguer = "0.1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
console = "0.6.2"
failure = "0.1.2"
directories = "1.0.1"
mkdirp = "0.1.0"
tabular = "0.1.2"
chrono = "0.4.6"
chrono-humanize = "0.0.11"

[[bin]]
name="now"
path="src/main.rs"

[badges]
travis-ci = { repository = "danreeves/now-cli", branch = "master" }
